# traj-propagate

./: .gitignore  Cargo.toml  README.md  example.sh
.github/workflows/: tests.yml
spice/: gm_de431.tpc  included.mk  included.tm  latest_leapseconds.tls  maven_cruise.bsp  other_masses.tpc  tests.tm  voyager2_flyby.bsp
src/: cli.rs  file_utils.rs  ivp_utils.rs  main.rs  nbs.rs  ode.rs  propagate.rs  run.rs  solvers.rs  spice_utils.rs  tests.rs
src/ivp_utils/: mod.rs  progress_bar.rs  solve.rs  solvers.rs
